--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <button onclick="submitCode()">確認</button>
     <div id="userResult" class="result"></div>
   </div>
-
+<button onclick="addTestTicket()">➕ 新增測試資料</button>
   <!-- 店家畫面 -->
   <div id="admin-section" style="display:none">
     <h3>店家控制台 - 完成編號</h3>
     <div id="ticketContainer"></div>
     <div id="adminResult" class="result"></div>
   </div>
-
+<button onclick="addTestTicket()">➕ 新增測試資料</button>
   <script src="js/main.js"></script>
   <script src="js/user.js"></script>
   <script src="js/admin.js"></script>
